fixed message stack wrapping

--- a/src/components/MessageStack/components/Messages.module.scss
+++ b/src/components/MessageStack/components/Messages.module.scss
@@ -6,7 +6,7 @@
     padding: 0;
     ul{
         display: flex;
-        flex-flow: column;
+        flex-flow: column nowrap;
         padding: 0;
         justify-content: flex-end;
         position: relative;
@@ -31,8 +31,12 @@
                 display: inline-block;
                 background-color: green;
                 border-radius: 2px;
+                white-space: nowrap;
                 padding:10px;
                 margin: 2px 0;
+                max-width: 50vw;
+                overflow: hidden;
+                text-overflow: ellipsis;
                 box-shadow: -10px 0 0 0px rgb(82, 82, 108) ;
             }
             .success{
